--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "web-analytics",
     "tracking"
   ],
+  "author": "Entro314 Labs <hey@entrolytics.click>",
+  "license": "MIT",
   "homepage": "https://entrolytics.click",
   "repository": {
     "type": "git",
-    "url": "https://github.com/entro314-labs/entro-astro"
+    "url": "https://github.com/entro314-labs/entro-astro",
+    "directory": "entro-astro"
   },
-  "license": "MIT",
-  "author": "Entro314 Labs <hey@entrolytics.click>",
+  "bugs": {
+    "url": "https://github.com/entro314labs/entrolytics-system/issues"
+  },
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -28,11 +34,18 @@
       "types": "./dist/client.d.ts"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
+  "sideEffects": false,
+  "engines": {
+    "node": ">=22.x"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -40,19 +53,13 @@
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "pnpm build"
   },
-  "peerDependencies": {
-    "astro": ">=5.0.0"
-  },
   "devDependencies": {
     "@biomejs/biome": "2.3.7",
     "astro": "^5.16.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   },
-  "engines": {
-    "node": ">=20.x"
-  },
-  "publishConfig": {
-    "access": "public"
+  "peerDependencies": {
+    "astro": ">=5.0.0"
   }
 }
